<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnEditLP_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_loupan_info" />

    <Button
        android:id="@+id/btnEditLP_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_loupan_pic" />

    <Button
        android:id="@+id/btnEditLD_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_loudong_info" />

    <Button
        android:id="@+id/btnEditLD_zuobiao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_loudong_zuobiao" />

    <Button
        android:id="@+id/btndelete_loupan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_loupan" />

</LinearLayout>